--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,4 +18,7 @@ build:
   parallel: true
   verbosity: normal
 
+before_build:
+  - nuget restore $(APPVEYOR_BUILD_FOLDER)\VisualStudioCppExtensions.sln -Verbosity quiet
+
 test: off
