Update AppVeyor builds:
Use VS2019 as AppVeyor environment
Generate artifact in AppVeyor
Avoid extension deployment on AppVeyor

--- a/GenerateCppFiltersExtension/GenerateCppFiltersExtension.csproj
+++ b/GenerateCppFiltersExtension/GenerateCppFiltersExtension.csproj
@@ -12,6 +12,7 @@
     <UpgradeBackupLocation>
     </UpgradeBackupLocation>
     <OldToolsVersion>15.0</OldToolsVersion>
+    <DeployExtension Condition="'$(AppVeyor)' != ''">False</DeployExtension>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
